Actualizar AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.angeluz.freyja">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- ...todo lo demás igual... -->
+</manifest>
 
     <!-- ===== PELIGROSOS (se piden en runtime) ===== -->
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
