--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- ...todo lo demás igual... -->
-</manifest>
 
-    <!-- ===== PELIGROSOS (se piden en runtime) ===== -->
+    <!-- Permisos -->
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
-
-    <!-- Android 13+ (sustituyen READ_EXTERNAL_STORAGE) -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
-
-    <!-- Teléfono/SMS (si usarás SOS) -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
-
-    <!-- Bluetooth moderno -->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"/>
-
-    <!-- Notificaciones (Android 13+) -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-
-    <!-- ===== ESPECIALES (se otorgan en Ajustes del sistema) ===== -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
-
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"/>
-
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
-
-    <!-- All files (opcional; se concede en pantalla especial de ajustes) -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
 
     <application
@@ -53,7 +37,6 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true">
 
-        <!-- Launcher -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -63,13 +46,11 @@
             </intent-filter>
         </activity>
 
-        <!-- Servicio en primer plano (mismo paquete, SIN carpeta core) -->
         <service
             android:name=".FreyjaService"
             android:exported="false"
             android:foregroundServiceType="location|microphone|camera|dataSync"/>
 
-        <!-- Auto-inicio al encender (mismo paquete) -->
         <receiver
             android:name=".BootCompletedReceiver"
             android:enabled="true"
@@ -78,9 +59,5 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
         </receiver>
-
-        <!-- Si más adelante agregamos NotificationListener o Accesibilidad,
-             los añadimos aquí. Por ahora lo dejamos fuera para evitar choques. -->
-
     </application>
 </manifest>
