perf: build más rápido (config cache, R8, Compose BOM) + workflow y proguard

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,17 @@
-# Ajustes útiles
-org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx2g
+# ==== PERFORMANCE ====
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+# Habilita configuration cache (GRAN mejora en builds repetidos)
+org.gradle.configuration-cache=true
+# Kotlin
+kotlin.incremental=true
 kotlin.code.style=official
+kotlin.daemon.jvmargs=-Xmx1g
 
-# 🔧 Necesario para las deps AndroidX que usa tu app
-android.useAndroidX=true
-android.enableJetifier=true
+# AGP / R8
+android.enableR8.fullMode=true
+
+# Compose
+android.compose.multiplatform.enable=false
