Actualizar AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,4 +65,24 @@
             </intent-filter>
         </receiver>
     </application>
+<application
+    android:name=".App"
+    android:theme="@style/Theme.Freyja">
+    
+    <activity
+        android:name=".SplashActivity"
+        android:exported="true"
+        android:theme="@style/Theme.Freyja">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+
+    <activity android:name=".MainActivity" android:exported="true"/>
+
+    <service
+        android:name=".VoiceService"
+        android:exported="false"/>
+</application>
 </manifest>
