Actualizar android-release.yml

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,3 +1,4 @@
+cat > .github/workflows/android-release.yml <<'YML'
 name: Android Release Build
 
 on:
@@ -67,7 +68,7 @@ jobs:
           name: freyja-release
           path: .
 
-      # Opción A: usar tu token personal (RELEASE_TOKEN)
+      # Opción A: token propio
       - name: Create GitHub Release (with APK)
         uses: softprops/action-gh-release@v2
         with:
@@ -76,7 +77,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
-      # Opción B (alternativa): usar GITHUB_TOKEN integrado
+      # Opción B (alternativa): usa el token integrado
       # - name: Create GitHub Release (with APK)
       #   uses: softprops/action-gh-release@v2
       #   with:
@@ -84,3 +85,4 @@ jobs:
       #     generate_release_notes: true
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+YML
