fix(androidx): enable android.useAndroidX + jetifier; disable dataBinding

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ android.enableR8.fullMode=true
 
 # Compose
 android.compose.multiplatform.enable=false
+android.useAndroidX=true
+android.enableJetifier=true
