--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         android:label="Freyja (Beta)"
         android:icon="@mipmap/ic_launcher"
         android:supportsRtl="true"
+android:usesCleartextTraffic="true"
+android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true">
 
         <activity
